fix the left side sticky jump problems

--- a/assets/css/myStyle.css
+++ b/assets/css/myStyle.css
@@ -55,7 +55,7 @@ div {
 
 .leftSide.fixed{
     position: fixed;
-    top:0;
+    /*top:0;*/
 }
 
 .leftSide{
@@ -244,27 +244,27 @@ nav > ol li, nav > ul li {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    /*position: relative;*/
 }
 
 .footerPage{
     position: absolute;
-    top:0;
     left: 0;
     z-index: -1;
-    padding-top:200%;
+    /*padding-top:200%;*/
     height:100%;
     width:100%;
 
 }
 
 footer{
-    position: absolute;
-    top:0;
+    position: relative;
     left: 0;
     z-index: -1;
-    padding-top:400%;
+    /*padding-top:400%;*/
     height:100vh;
+    top:600vh;
+
     /*overflow: hidden;*/
 
     /*height: */
